--- a/xattacker/Gemfile
+++ b/xattacker/Gemfile
@@ -3,3 +3,9 @@ source "https://rubygems.org"
 gem 'sinatra'
 gem 'sinatra-contrib'
 gem 'neography'
+gem 'sidekiq'
+gem 'pry'
+gem 'thor'
+gem 'nokogiri'
+gem 'activesupport'
+gem 'httparty'
