--- a/lib/attack-graph-js/package.json
+++ b/lib/attack-graph-js/package.json
@@ -10,5 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "request": "~2.51.0"
+  },
+  "devDependencies": {
+    "expect.js": "~0.3.1"
   }
 }
